src/tests/errors/types/002.ura
// parse_errors/023 — unknown struct used as return type
use "@/header"

fn make() Widget:
    w Widget
    return w

main():
    output("hi\n")